Release 1.1.1 : - process reshare annotation text - try to recover google+ ID when an email is entered in input - add "unwrapAttachments" option - home page update (labels, new paragraph "About this service", javascript moved to page bottom) - add a favicon.ico file - bug fix : a post with objectType null produces NullPointerException (Now, it is processed as an article) - bug fix : video with no attached image produces NullPointerException (Now, display name is used for the video link) - enhance multi "google+ api key" support - error messages update

--- a/war/css/gplus-to-rss.css
+++ b/war/css/gplus-to-rss.css
@@ -34,6 +34,10 @@ input.ui-button {
 	padding: 0.1em 1em;
 }
 
+a.link {
+	color: #C77405;
+}
+
 @media only screen and (max-width: 750px) {
 	section {
 		width: 100%;
